# tc_ncoda_python

./: README.md  pyproject.toml
src/ncoda_proc/: reader.py
src/ncoda_util/: main_ncoda.py  plot_ncoda_data.py  read_ncoda_3d.py  read_ncoda_data.py  read_ncoda_lon_lat.py
tests/manual/: plot_data.py
